Fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -182,7 +183,7 @@ nav{
   width: 100vw;
   position: fixed;
   z-index: 1001;
-  transition:all .3s ease;
+  transition:all .5s ease;
   left: -100vw;
   background-color: rgba(17, 2, 2,.4);
 }
@@ -213,7 +214,8 @@ nav.active{
   flex-flow: column;
   background-color: var(--white);
   position: relative;
-  border-right: .001rem solid var(--black)
+  border-right: .001rem solid var(--black);
+  transition : all .5s ease;
 }
 .profile{
   display: flex;
@@ -314,61 +316,22 @@ nav.active{
   padding-top:5rem ;
   padding-bottom: 1.25rem;
 }
-.skills-container{
-  height: 15.625rem;
-  margin: auto;
-  position: relative;
-  display: grid;
-  place-items: center;
-  overflow: hidden;
-}
 .slide-track{
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: center;
-  width: calc(15.625rem*18);
-  animation: scroll 40s linear infinite;
-  
+
 }
-.slide-track:hover{
-  animation-play-state: paused;
-  cursor: pointer;
-}
-@keyframes scroll{
-  0% {
-    transform: translateX(0);
-} 100%{
-  transform: translateX(calc(-250px*9));
-}
-}
+
 .skill{
-  width: 15.625rem;
-  height: 12.5rem;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 1rem;
   perspective: 100px;
   
-}
-.skill::before,
-.skill::after{
- 
-  content: '';
-  height: 100%;
-  position: absolute;
-  width: 15%;
-  z-index: 2;
-}
-.skill::before{
-  left: 0;
-  top: 0;
-}
-.skill::after{
-  right: 0;
-  top: 0;
-  transform: rotateZ(180deg);
+  
 }
 .skill-content{
   display: flex;
@@ -378,9 +341,10 @@ nav.active{
   background-color: transparent;
   height: 100%;
   width: 100%;
-  transition: transform .5s;
+  transition: all .5s;
   background-color: var(--buttonbg);
   border-radius: .5rem;
+  padding: 1rem;
 }
 .skill-content span{
   font-weight: 700;
@@ -710,6 +674,9 @@ footer p{
   #about{
     height: 70%;
   }
+  .skill{
+    width: 45%;
+  }
   .projects-container{
     flex-flow: row wrap;
   }
@@ -773,6 +740,9 @@ footer p{
   }
   #about{
     height: 80%;
+  }
+  .skill{
+    width: 30%;
   }
   .projects-container{
     flex-flow: row wrap;
